Webstack/k8s/monitoring/grafana-ingress.yaml
# ingress voor grafana
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.bl-webstack.duckdns.org
    secretName: grafana-tls
  rules:
  - host: grafana.bl-webstack.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
